# squadFix

./: CMakeLists.txt  LICENSE  README.md  serverlist.cfg  serverlist.cfg.sha
.github/workflows/: update_serverlist.yml
src/: main.cpp
